[tool.poetry]
name = "moa-nexsci-data-hosting"
version = "0.1.0"
description = ""
authors = ["Greg Olmschenk <greg@olmschenk.com>"]
readme = "README.md"
packages = [{include = "moa_nexsci_data_hosting"}]

[tool.poetry.dependencies]
python = "^3.9"
backports-strenum = "^1.1.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
pysftp = "^0.2.9"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

